Made Data entry necessery

--- a/views/editPost.ejs
+++ b/views/editPost.ejs
@@ -6,15 +6,15 @@
         <form action="/updatePost/<%= post.id %>" method="post">
             <div class="mb-3">
                 <label for="title" class="form-label">Title</label>
-                <input type="text" class="form-control" id="title" name="title" value="<%= post.title %>">
+                <input required type="text" class="form-control" id="title" name="title" value="<%= post.title %>">
             </div>
             <div class="mb-3">
                 <label for="description" class="form-label">Description</label>
-                <textarea class="form-control" id="description" name="description" rows="3"><%= post.description %></textarea>
+                <textarea required class="form-control" id="description" name="description" rows="3"><%= post.description %></textarea>
             </div>
             <div class="mb-3">
                 <label for="author" class="form-label">Author</label>
-                <input type="text" class="form-control" id="author" name="author" value="<%= post.author %>">
+                <input required type="text" class="form-control" id="author" name="author" value="<%= post.author %>">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         
