--- a/views/newPost.ejs
+++ b/views/newPost.ejs
@@ -35,15 +35,15 @@
             <form action="/newPost" method="post">
                 <div class="mb-3">
                     <label for="title" class="form-label">Title</label>
-                    <input type="text" class="form-control" id="title" name="title">
+                    <input required type="text" class="form-control" id="title" name="title">
                 </div>
                 <div class="mb-3">
                     <label for="description" class="form-label">Description</label>
-                    <textarea class="form-control" id="description" name="description" rows="3"></textarea>
+                    <textarea required class="form-control" id="description" name="description" rows="3"></textarea>
                 </div>
                 <div class="mb-3">
                     <label for="author" class="form-label">Author</label>
-                    <input type="text" class="form-control" id="author" name="author">
+                    <input required type="text" class="form-control" id="author" name="author">
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             
